--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </section>
         <br>
         <section id="gioithieu">
-            <img src="C:\Users\admin\Downloads\anhcuaphong.jpg" alt="ảnh" class="circle-img">
+            <img src="images/anhcuaphong.jpg" alt="ảnh" class="circle-img">
         </section>
 
         
@@ -111,19 +111,19 @@
     <div>
         <h4 class="h444">WITH A1.1</h4>
         <div style="gap: 30px;">
-        <video controls src="C:\Users\admin\Downloads\video1.mp4">video1</video>
-        <video controls src="C:\Users\admin\Downloads\video2.mp4">video2</video>
+        <video controls src="images/video1.mp4">video1</video>
+        <video controls src="images/video2.mp4">video2</video>
         </div>
     </div>
     <div>
         <h4>WITH MY FRIENDS</h4>
         <div style="gap: 30px;">
-        <video controls src="C:\Users\admin\Downloads\video3.mp4">video3</video>
-        <video controls src="C:\Users\admin\Downloads\video4.mp4">video4</video>
+        <video controls src="images/video3.mp4">video3</video>
+        <video controls src="images/video4.mp4">video4</video>
         </div>
     
     </div>
     <br>
     <br>
     <br>
-</body>
+</body>/
