--- a/index.html
+++ b/index.html
@@ -126,4 +126,10 @@
     <br>
     <br>
     <br>
-</body>/
+  <a href="form.html" target="_blank">
+    <button class="custom-button" >Liên Hệ</button></a>
+    <br>
+    <br>
+    <br>
+    
+</body>
