--- a/form.html
+++ b/form.html
@@ -67,7 +67,7 @@
 <body>
     <div class="contact-form">
         <h2>Biểu Mẫu Liên Hệ</h2>
-        <form action="submit.php" method="get">
+        <form target="_blank" action="https://formspree.io/f/xyzkjrqb" method="post">
             <!-- Trường nhập họ và tên -->
             <label for="name">Họ và tên:</label>
             <input type="text" id="name" name="name" placeholder="Nhập họ và tên" required>
