--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <li><a href="#trangcanhan">Trang cá nhân</a></li>
                 <li><a href="#sothich">Sở thích</a></li>
                 <li><a href="#mymemories">My Memories</a></li>
+            
             </ul>
         </nav>
     </header>
@@ -131,5 +132,12 @@
     <br>
     <br>
     <br>
+    <a target="_blank" href="tim.html">Cảm mơn bạn đã ghé page của mình</a><br>
+    <a target="_blank" href="phaohoa.html">❊❊❊</a>
+<br>
+<br>
+<br>
+<br>
+
     
 </body>
